2010-06-22  Jb Evain  <jbevain@novell.com>

	* EnumerableQuery_T.cs
	* QueryableEnumerable.cs:
		override ToString.

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EnumerableQuery.cs:
	* EnumerableQuery_T.cs:
	* EnumerableExecutor.cs: 
	* EnumerableExecutor_T.cs: Include in Moonlight.

	* Enumerable.cs: Moonlight too needs Zip.

2010-05-25  Jérémie Laval  <jeremie.laval@gmail.com>

	* ParallelExecuter.cs: Fix NRE caused by lambda wrapping

2010-05-25  Jb Evain  <jbevain@novell.com>

	* Enumerable.cs: make Reverse lazier. Based on a patch by
	Matthew Flaschen <matthew.flaschen@gatech.edu>. Fixes #608195.

2010-05-19  Jb Evain  <jbevain@novell.com>

	* Enumerable.cs: fix GroupBy to deal with a null key for the last
	group entry. Also fix GroupBy to properly throw ArgumentNullException.

2010-05-05  Jérémie Laval  <jeremie.laval@gmail.com>

	* ParallelEnumerable.cs: Some operators weren't declared
	as extension methods. Fixed.

2010-04-29  Jérémie Laval  <jeremie.laval@gmail.com>

	* ParallelQueryEnumerator.cs: Use new non-blocking collection
	for storing indexed elements.

2010-04-29  Jérémie Laval  <jeremie.laval@gmail.com>

	* ParallelExecuter.cs: Bring indexed worker methods support.
	Check for null callback.

2010-04-15  Jérémie Laval  <jeremie.laval@gmail.com>

	* OrderedParallelQuery.cs:
	* ParallelEnumerable.cs:
	* ParallelExecuter.cs:
	* ParallelPartitioner.cs:
	* ParallelQuery.cs:
	* ParallelQueryEnumerator.cs: First check-in of PLinq

2010-04-15  Jérémie Laval  <jeremie.laval@gmail.com>

	* ParallelExecutionMode.cs:
	* ParallelMergeOptions.cs: Initial check-in of PLinq (enum)

2010-04-12  Miguel de Icaza  <miguel@novell.com>

	* Enumerable.cs: Jumbo patch that inlines code, mainly for the AOT
	scenario where we our compiler cant infer the extra layer of
	indirection of a lambda function.

	But additionally, since we lack support for our JIT to inline
	intermediate delegate calls, it should save memory and run
	faster. 
